o Add initial README o Give final name to library (libspixels.a)

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -3,7 +3,7 @@ CFLAGS=-Wall -O3 $(INCLUDES) $(DEFINES)
 CXXFLAGS=$(CFLAGS)
 INCLUDES=-I../include -I.
 
-libmultispi.a: $(LIB_OBJECTS)
+libspixels.a: $(LIB_OBJECTS)
 	ar rcs $@ $^
 
 %.o : %.cc
@@ -13,4 +13,4 @@ libmultispi.a: $(LIB_OBJECTS)
 	$(CC) $(CXXFLAGS) -c -o $@ $<
 
 clean:
-	rm -f libmultispi.a $(LIB_OBJECTS)
+	rm -f libspixels.a $(LIB_OBJECTS)
