o Add a direct GPIO writing implementation of MultiSPI which is   useful if not using WS2801.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,4 +1,4 @@
-LIB_OBJECTS=ft-gpio.o dma-multi-spi.o rpi-dma.o mailbox.o led-strip.o
+LIB_OBJECTS=ft-gpio.o dma-multi-spi.o rpi-dma.o mailbox.o direct-multi-spi.o led-strip.o
 CFLAGS=-Wall -O3 $(INCLUDES) $(DEFINES)
 CXXFLAGS=$(CFLAGS)
 INCLUDES=-I../include -I.
